--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.datasource.password = tar123
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto = create
+# spring.jpa.hibernate.ddl-auto = create
+
+logging.level.org.hibernate = INFO
+logging.level.org.springframework.test = WARN
